--- a/docs/style.css
+++ b/docs/style.css
@@ -31,12 +31,6 @@
     line-height: 15px;
 }
 
-.mini-text.status {
-    color: var(--white-color);
-    padding: 0;
-    margin: 0;
-}
-
 * {
     font-family: "Inter", sans-serif;
 }
@@ -193,4 +187,37 @@ header {
 
     color: var(--white-color);
     text-align: center;
+}
+/*===============for card apps===============*/
+.geo-icon {
+    width: 12px;
+    height: 15px;
+    background: url('assets/geolacation.svg') center no-repeat;
+}
+
+.adress-slot {
+    display: flex;
+    gap: 9px;
+    width: 100%;
+    align-items: center;
+}
+
+.mini-text.status {
+    color: var(--white-color);
+    padding: 0 10px;
+    margin: 0;
+    border-radius: 8px;
+    align-self: flex-start;
+}
+
+.mini-text.status.approved {
+    background-color: var(--main-color);
+}
+
+.mini-text.status.declined {
+    background-color: var(--error-status-color);
+}
+
+.mini-text.status.pending {
+    background-color: var(--inactive-color);
 }
