--- a/docs/style.css
+++ b/docs/style.css
@@ -100,6 +100,10 @@ header {
     margin: 0 0 8px;
     border-radius: 12px;
 }
+
+.card.app {
+    border-radius: 0 0 12px 12px;
+}
 /*===============card add photo===============*/
 .photo-grid {
     display: flex;
@@ -190,25 +194,19 @@ header {
 /*==============================for card apps================================*/
 
 /*===============photos===============*/
-/* Галерея фото в карточках заявок */
-.card-photos {
-    display: flex;
-    gap: 8px;
-    overflow-x: auto;
-    max-width: 100%;
+.show-photos {
+    overflow: hidden;
+    height: 138px;
+    width: 100%;
+    border-radius: 12px 12px 0px 0px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: #f5f5f5;
 }
-
-.card-photo {
-    max-height: 120px;
-    max-width: 150px;
-    object-fit: cover;
-    border-radius: 8px;
-    flex-shrink: 0;
-}
-
 /*===============address===============*/
 .geo-icon {
-    width: 12px;
+    min-width: 12px;
     height: 15px;
     background: url('assets/geolacation.svg') center no-repeat;
 }
@@ -218,6 +216,14 @@ header {
     gap: 9px;
     width: 100%;
     align-items: center;
+}
+
+/*===============date===============*/
+.slot-date-status {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: space-between;
 }
 
 /*===============status===============*/
